@@ -5,6 +5,7 @@ import com.google.gson.JsonObject;
 import net.pitan76.assetbridge.util.Json;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.regex.Matcher;
@@ -36,7 +37,7 @@ public class ModMetadata {
         Map<String, String> names = new LinkedHashMap<>();
         // Fabric first: an archive carrying both is a multi-loader jar, and either is as good.
         putFabricName(names, metadata.get("fabric.mod.json"));
-        for (String file : java.util.List.of("META-INF/neoforge.mods.toml", "META-INF/mods.toml")) {
+        for (String file : Arrays.asList("META-INF/neoforge.mods.toml", "META-INF/mods.toml")) {
             putTomlNames(names, metadata.get(file));
         }
         return names;
@@ -71,8 +72,8 @@ public class ModMetadata {
     }
 
     private static void put(Map<String, String> names, @Nullable String namespace, @Nullable String displayName) {
-        if (namespace == null || namespace.isBlank()) return;
-        if (displayName == null || displayName.isBlank()) return;
+        if (namespace == null || namespace.trim().isEmpty()) return;
+        if (displayName == null || displayName.trim().isEmpty()) return;
         names.putIfAbsent(namespace.toLowerCase(java.util.Locale.ROOT), displayName.trim());
     }
 }
