@@ -8,6 +8,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.Enumeration;
 import java.util.List;
@@ -51,7 +52,7 @@ public class NestedArchives {
                 ZipEntry entry = it.nextElement();
                 if (!entry.isDirectory() && isArchive(entry.getName())) nested.add(entry);
             }
-            if (nested.isEmpty()) return List.of();
+            if (nested.isEmpty()) return Collections.emptyList();
 
             nested.sort(Comparator.comparing(ZipEntry::getName));
             Path target = cacheDir.resolve(safeName(parent.getFileName().toString()));
