@@ -3,7 +3,9 @@ package net.pitan76.assetbridge.block;
 import net.minecraft.world.level.block.state.properties.Property;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Optional;
@@ -29,7 +31,7 @@ public class StringProperty extends Property<String> {
     }
 
     public static StringProperty create(String name, Collection<String> values) {
-        return new StringProperty(name, List.copyOf(new LinkedHashSet<>(values)));
+        return new StringProperty(name, Collections.unmodifiableList(new ArrayList<>(new LinkedHashSet<>(values))));
     }
 
     /**
@@ -67,8 +69,9 @@ public class StringProperty extends Property<String> {
     @Override
     public boolean equals(Object other) {
         if (this == other) return true;
-        return other instanceof StringProperty property
-                && super.equals(other) && values.equals(property.values);
+        if (!(other instanceof StringProperty)) return false;
+        StringProperty property = (StringProperty) other;
+        return super.equals(other) && values.equals(property.values);
     }
 
     /** {@code Property#hashCode} is final and delegates here. */
